welcome.lessons.welcome.bat.bool2.InOrderEqual.scala.error
inOrderEqual:6: error: type mismatch;
 found   : Unit
 required: Boolean
	 	f=true 
                 ^inOrderEqual:7: error: type mismatch;
 found   : Unit
 required: Boolean
	}else {f=false}
                ^inOrderEqual:13: error: type mismatch;
 found   : Unit
 required: Boolean
	 	f=true 
                 ^inOrderEqual:14: error: type mismatch;
 found   : Unit
 required: Boolean
	}else {f=false}
                ^